--- a/default.hbs
+++ b/default.hbs
@@ -48,8 +48,8 @@
              <section class="copyright">All content copyright <a href="/">{{@blog.title}}</a> &copy; 2015 &bull; All rights reserved.</section>
              <section class="poweredby">Proudly published with <a class="icon-ghost" href="http://ghost.org">&nbsp;</a>
                <a href="http://ghost.org">Ghost</a> | 
-               <a href="https://github.com/dongri/Coder">Coder</a> theme forked from Casper by 
-               <a href="http://twitter.com/@dongriat">@dongriat</a></section>
+               <a href="https://github.com/henrebotha/Coder">Theme</a> forked from
+               <a href="https://github.com/dongri/Coder">Coder</a></section>
         </div>
     </footer>
 
