--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -58,7 +58,7 @@ html {
 body {
     height: 100%;
     max-height: 100%;
-    font-family: Roboto,"Helvetica Neue",Helvetica,Arial,freesans,sans-serif;
+    font-family: Lato,"Helvetica Neue",Helvetica,Arial,freesans,sans-serif;
     font-weight: 300;
     font-size: 1.6rem;
     line-height: 1.3em;
@@ -93,7 +93,7 @@ h1 {
     letter-spacing: -2px;
     text-indent: -3px;
     font-weight: 900;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 h2 {
